--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5",
+    "node-fetch": "^2.6.0",
     "xml2js": "^0.4.23"
   }
 }
