--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "lint:fix": "eslint --fix app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint:fix": "eslint --fix app.js"
   },
   "author": "",
   "license": "ISC",
